💄 Style: correct wrong color

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -53,7 +53,7 @@
         height: 2.5rem;
         outline: none;
         border-radius: 50%;
-        color: var(--text1);
+        color: #212529;
         cursor: pointer;
         margin-right: 0.5rem;
       }
