--- a/src/components/HeaderMoving.module.scss
+++ b/src/components/HeaderMoving.module.scss
@@ -59,7 +59,7 @@
         height: 2.5rem;
         outline: none;
         border-radius: 50%;
-        color: var(--text1);
+        color: #212529;
         cursor: pointer;
         margin-right: 0.5rem;
       }
